[package]
name = "poc-sonde"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.11"
clap = { version = "4.5", features = ["derive"] }
hyper = { version = "0.14", features = ["server", "http1", "tcp"] }
hyper-util = { version = "0.1", features = ["tokio"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"], optional = true }
serde_json = "1.0"
async-trait = "0.1"

[features]
default = []
redis-persistence = ["redis"]

[dev-dependencies]
mockito = "1.6"
